--- a/part_1_mars_news copy.ipynb
+++ b/part_1_mars_news copy.ipynb
@@ -16,18 +16,11 @@
    "source": [
     "# Import Splinter and BeautifulSoup\n",
     "from splinter import Browser\n",
-    "from bs4 import BeautifulSoup as soup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "browser = Browser('chrome')"
+    "from bs4 import BeautifulSoup as soup\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
   {
@@ -43,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,20 +56,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a Beautiful Soup object\n"
+    "# Create a Beautiful Soup object\n",
+    "html= browser.html\n",
+    "mars_news_soup = soup(html, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract all the text elements\n"
+    "# Extract all the text elements\n",
+    "text_elements = mars_news_soup.find_all('div', class_='list_text')"
    ]
   },
   {
@@ -102,11 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an empty list to store the dictionaries\n"
+    "# Create an empty list to store the dictionaries\n",
+    "scraped_data = []"
    ]
   },
   {
@@ -118,7 +115,16 @@
     "# Loop through the text elements\n",
     "# Extract the title and preview text from the elements\n",
     "# Store each title and preview pair in a dictionary\n",
-    "# Add the dictionary to the list\n"
+    "# Add the dictionary to the list\n",
+    "for element in text_elements:\n",
+    "    title = element.find('div', class_='content_title').text\n",
+    "    preview = element.find('div', class_='article_teaser_body').text\n",
+    "\n",
+    "    # Store each title and preview pair in a dictionary\n",
+    "    data_dict = {'title': title, 'preview': preview}\n",
+    "\n",
+    "    # Add the dictionary to the list\n",
+    "    scraped_data.append(data_dict)"
    ]
   },
   {
@@ -167,7 +173,8 @@
     }
    ],
    "source": [
-    "# Print the list to confirm success\n"
+    "# Print the list to confirm success\n",
+    "scraped_data"
    ]
   },
   {
@@ -189,7 +196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -203,11 +210,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "d7a6f6cc0df5a9226fa085535838c350fd9b2f5a3f741cc6f6a87ff2481fac0d"
    }
   }
  },
